--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,7 +9,9 @@
 @import "node_modules/gentelella/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4";
 
 // Variables
-@import "variables";	
+@import "variables";
+
+@import "bootstrap.fd";	
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
